@@ -30,6 +30,8 @@
   * Update rust-analyzer's inlay hint protocol support.
   * Add support for ~typescript-language-server~’s inlay hints.
   * Add support for ~workspace/willRenameFiles~ and ~workspace/didRenameFiles~.
+  * Improve project root import to read specific keys instead of any events.
+  * Support ~labelDetails~ of Lsp Specification 3.17
 ** Release 8.0.0
   * Add ~lsp-clients-angular-node-get-prefix-command~ to get the Angular server from another location which is still has ~/lib/node_modules~ in it.
   * Set ~lsp-clients-angular-language-server-command~ after the first connection to speed up subsequent connections.
